--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mpiloshini RMH 24</title>
+    <title>Vite + React + TS</title>
   </head>
-  <body class="bg-[#e0e0e0] text-[#313131]">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
